fix IE7 fix search submit button
submit button was displaying value text "submit"
and was slighly too small.

--- a/app/assets/stylesheets/peoplefinder/peoplefinder-ie7.css.scss
+++ b/app/assets/stylesheets/peoplefinder/peoplefinder-ie7.css.scss
@@ -170,8 +170,15 @@ form #working-days ul,
 }
 
 form.search-box {
+  /*ensure search box height*/
   .form-control {
     height: 25px;
+  }
+  /*prevent submit text appearing over button*/
+  .submit-button {
+  line-height: 0;
+  width: 49px;
+  height: 49px;
   }
 }
 
